--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -1,7 +1,7 @@
 .board {
 	width: 300px;
 	height: 300px;
-	background-color: coral;
+	box-shadow: 0 0 10px 3px rgb(184, 182, 182);
 	display: flex;
 	flex-wrap: wrap;
 }
