--- a/src/components/Cell.css
+++ b/src/components/Cell.css
@@ -2,11 +2,20 @@
 	width: 100px;
 	height: 100px;
 	background-color: #fff;
-	border: 1px solid coral;
+	border: 1px solid rgb(177, 174, 201);
 	outline: none;
 	cursor: pointer;
 	font-size: 50px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+
+.cell:hover {
+	background-color: rgb(225, 225, 228);
+	transition: .3s all ease;
+}
+
+.cell:active {
+	background-color: rgb(164, 164, 165);
 }
